<resources>
    <string name="app_name">CovidVac</string>

    <string name="main_greeting">Welcome</string>
    <string name="main_btn_enter">Enter</string>
    <string name="citizen_login_tv_tax_id">Insurance ID</string>
    <string name="citizen_login_et_tax_id_hint">Enter Insurance ID</string>
    <string name="citizen_login_tv_birthdate">Date of birth</string>
    <string name="citizen_login_et_birthdate_hint">Enter date of birth</string>
    <string name="title_activity_citizen_main">CitizenMainActivity</string>
    <string name="citizen_main_tab_text_1">Make appointment</string>
    <string name="citizen_main_tab_text_2">Appointments</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="formName">Name: </string>
    <string name="formInsurance">Insurance ID: </string>
    <string name="citizen_login_wrong_credentials">Wrong credentials. \nPlease, try again.</string>
    <string name="title_activity_maps" translatable="false">Map</string>
    <string name="formBDate">Date of birth: </string>
    <string name="formID">ID: </string>
    <string name="formAppointmentDate">First Appointment Date: </string>
    <string name="formSecondAppointmentDate">Second Appointment Date: </string>
    <string name="formSecondAppointmentDateHint">Please select First Appointment Date first.</string>
    <string name="formTelephone">Telephone: </string>

    <string name="formVCentresIn">Choose Vaccination Centre: </string>
    <string name="nearestVacCentre">(Closest to you)</string>
    <string name="btMakeAppointment">Submit</string>
    <string name="formDateHour">Hour: </string>
    <string name="dialog_edit_appointment_btnApprove">Approve</string>
    <string name="dialog_edit_appointment_btnReject">Reject</string>
    <string name="dialog_edit_appointment_btnCancel">Cancel</string>
    <string name="hoursHint">Please select a hour.</string>
    <string name="employee_login_username">Username</string>
    <string name="employee_login_password">Password</string>
    <string name="employee_login_username_hint">Enter username</string>
    <string name="employee_login_password_hint">Enter password</string>
    <string name="notAvailableDate">Not Available date.</string>
    <string name="submitSuccess">Appointment Submited.</string>
    <string name="appAlreadyExist">You have already an Appointment.</string>
    <string name="mapCentres">Vaccination Centres locations</string>
    <string name="main_manage">Manage</string>
    <string name="employee_main_btn_accepted">Confirmed</string>
    <string name="employee_main_btn_pending">Pending</string>
    <string name="employee_main_btn_all">Show all</string>
    <string name="voice_prompt">Ask for: enter, manage, maps, english, greek</string>
    <string name="voice_false">I did not understand that</string>
    <string name="voice_not_supported">Speech recognition in not available</string>
    <string name="citizen_login_wrong_age">Appointments can not be made for people under the age of</string>
    <string name="employee_main_btn_done">Done</string>
</resources>
