<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingHorizontal="15dp"
    app:layoutDescription="@xml/fragment_citizen_main_scene"
    tools:context=".ui.main.NewAppointmentFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/formName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/formName"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvFormNameIn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="TextView"
                android:textColor="#000000"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/formID"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/formID"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvFormIDIn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="TextView"
                android:textColor="#000000"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/formInsurance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/formInsurance"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvFormInsuranceIn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="TextView"
                android:textColor="#000000"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/formBDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/formBDate"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvFormBDateIn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="TextView"
                android:textColor="#000000"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/formTelephone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/formTelephone"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvFormTelephoneIn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="TextView"
                android:textColor="#000000"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/formFirstAppointmentDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20sp"
                android:text="@string/formAppointmentDate"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/formFirstAppointmentDateIn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:focusable="false"
                android:inputType="textPersonName"
                android:text="Name"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/formSecondAppointmentDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/formSecondAppointmentDate"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/formSecondAppointmentDateIn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/formSecondAppointmentDateHint"
                android:textColor="#000000"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/tvFormVCentres"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20sp"
                android:text="@string/formVCentresIn"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etFormVCentreIn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:focusable="false"
                android:inputType="textPersonName"
                android:textSize="24sp" />

            <Button
                android:id="@+id/btMakeAppointment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25sp"
                android:text="@string/btMakeAppointment" />
        </LinearLayout>

    </ScrollView>



</LinearLayout>

